--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -13,7 +13,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>React App</title>
+    <title>E-Commerce</title>
   </head>
   <body>
     <div id="root"></div>
